--- a/style.css
+++ b/style.css
@@ -13,14 +13,12 @@ html {
 }
 
 li {
-  /* ??? */
   list-style: none;
 }
 
 /* Layout */
 
 .container {
-  /* ??? */
   margin: 0 auto;
   max-width: 1600px; /* 4 x image */
 }
@@ -42,12 +40,6 @@ h1 {
 
 /* Gallery */
 
-.gallery ul {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-
 /* Keep image proportions on resize */
 img {
   max-width: 100%;
@@ -61,14 +53,14 @@ change the layout of the gallery to show 2 columns
 */
 @media screen and (min-width: 400px) {
 
-  /* ul {
+  ul {
+    display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     
-  } */
+  }
 
   li {
-    /* ??? */
     flex-basis: 50%;
   }
 }
@@ -77,7 +69,7 @@ change the layout of the gallery to show 2 columns
 When there's room for more than 2 columns,
 change the layout of the gallery to show 3 columns
 */
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
   li {
     flex-basis: calc(100% / 3);
   }
@@ -90,7 +82,7 @@ change the layout of the gallery to show 4 columns
 
 /* ??? Write your own. You got this :) */
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1200px) {
   li {
     flex-basis: 25%;
   }
